[metadata]
name            = pyuavcan_cli
version         = file: pyuavcan_cli/VERSION
author          = UAVCAN Development Team
author_email    = uavcan-maintainers@googlegroups.com
url             = https://uavcan.org
description     = A lightweight command-line utility built on PyUAVCAN for bus management and test automation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    command-line
    uavcan
    data-bus
    can-bus
    ethernet
    vehicular
    onboard-networking
    avionics
    communication-protocol
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Object Brokering
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe             = False
include_package_data = True
packages             = find:
install_requires =
    pyuavcan       >= 0.1, < 2.0
    argparse_utils ~= 1.2
    ruamel.yaml    >= 0.15.97, < 2.0

[options.packages.find]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
include =
    pyuavcan_cli
    pyuavcan_cli.*

[options.entry_points]
console_scripts =
    pyuavcan = pyuavcan_cli:main

[options.package_data]
* = *

[tool:pytest]
# https://docs.pytest.org/en/latest/pythonpath.html#invoking-pytest-versus-python-m-pytest
testpaths        = pyuavcan_cli tests
python_files     = *.py
python_classes   = _UnitTest
python_functions = _unittest_
log_level        = DEBUG
log_cli_level    = DEBUG
log_cli          = true
addopts          = --doctest-modules -v --fulltrace
filterwarnings =
    error

[mypy]
# Python version is not specified to allow checking against different versions.
warn_return_any        = True
warn_unused_configs    = True
disallow_untyped_defs  = True
check_untyped_defs     = True
no_implicit_optional   = True
warn_redundant_casts   = True
warn_unused_ignores    = True
show_error_context     = True
new_semantic_analyzer  = True
files =
    **/*.py
mypy_path =
    ../pyuavcan

[mypy-pyuavcan.*]
ignore_errors          = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-pydsdl]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-argparse_utils]
ignore_missing_imports = True

[coverage:run]
data_file = .coverage
branch    = True
parallel  = True
source =
    pyuavcan_cli
    tests
    ../pyuavcan

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    assert False
    if False:
    if __name__ == .__main__.:

[pycodestyle]
# E221 multiple spaces before operator
# E241 multiple spaces after ':'
ignore          = E221, E241
max-line-length = 120
show-source     = True
